# MIA-Search

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  TODO.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  test.test.ts  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.config.ts.timestamp-1778046839207-caee80b227eda.mjs  vitest.config.ts.timestamp-1778047242470-a0ffe22329263.mjs  vitest.config.ts.timestamp-1778047330583-35aa89240ae4e.mjs
.github/: dependabot.yml
docs/: github_issues_draft.md  github_release_v0.1.0.md  github_release_v0.1.1.md  github_release_v0.1.2.md  github_release_v0.1.3.md  github_release_v0.1.3_draft.md  github_release_v0.1.4.md  implementation_plan.md  implementation_tasks.md  mvp_and_growth_plan.md  mvp_backlog.md  progress_log.md  release_notes_v0.1.0.md  release_ops_playbook.md  (+5 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/commands/: actions.rs  errors.rs  favorites.rs  health.rs  history.rs  index.rs  mod.rs  profiles.rs  search.rs  settings.rs
src-tauri/src/core/: async_metadata_service.rs  constants.rs  content_search.rs  entry_utils.rs  filters.rs  index_service.rs  metadata_service.rs  mod.rs  models.rs  query_matcher.rs  ranking.rs  search_mapper.rs  search_service.rs
src-tauri/src/platform/: clipboard.rs  mod.rs  open_path.rs  path_security.rs  reveal_in_explorer.rs
src-tauri/src/storage/: favorites_store.rs  history_store.rs  index_store.rs  mod.rs  persistence.rs  presets_store.rs  settings_store.rs
(+62 files in other folders)
