[package]
name = "mia-search"
version = "0.1.2"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
rust_search = "2.1.0"
regex = "1"
rfd = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"
