[package]
name = "mia-search"
version = "0.1.4"
edition = "2021"
build = "build.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
rayon = "1"
regex = "1"
rfd = "0.17"
rust_search = "2.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
tauri = { version = "2", features = [] }
lru = "0.18"

[dev-dependencies]
tempfile = "3"
